# HAIWPA

./: README.md  config.py  haiwpa_backend.py  haiwpa_chat.py  haiwpa_mcp.py  haiwpa_workout.py  pyproject.toml  workout_rules.pl
notes/: D1_20251124.md  D2_20251125.md
test_data/: approved_workout.json  injury_present.json  insufficient_rest.json  trained_together_injury.json
tests/: test_backend_mcp.py  test_mcp_helpers.py  test_mcp_integration.py  test_prolog_rules.py  test_workout_extraction.py
tutorials/mcp/: client.py  server.py
tutorials/prolog/: arithmetic.pl  kb2.pl  kb3.pl  kb4.pl  kb5.pl  likes.pl  python-prolog.py
