[project]
name = "haiwpa"
version = "0.1.0"
description = "Hybrid AI Workout Planning Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "gradio>=6.1.0",
    "instructor>=1.13.0",
    "openai>=2.8.1",
    "pyswip>=0.3.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
